syntax = "proto3";
option java_multiple_files = true;

package dk.via.sep3;

message DTOBook {
  string id = 1;
  string title = 2;
  string author = 3;
  string isbn = 4;
  string state = 5;
}

message GetAllBooksRequest {
}

message GetAllBooksResponse {
  repeated DTOBook books = 1;
}

service BookService {
  rpc getAllBooks (GetAllBooksRequest) returns (GetAllBooksResponse);
}